--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+	<meta charset="UTF-8"/>
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 	<style type="text/css">
 		.p{
